package org.example.ud6practica1;

public abstract class MetodoPago {

    public abstract void procesarPago(double importe);
}
